fixed bugs in quiz